infrastructure/sonarqube/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sonarqube
  namespace: sonarqube
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
    - host: "sonarqube.robert-wiesner.de"
      http:
        paths:
          - path: "/"
            pathType: ImplementationSpecific
            backend:
              serviceName: sonarqube
              servicePort: http
